--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ langchain-community==0.2.0
 langchain-core==0.2.0
 langchain-text-splitters==0.2.0
 langsmith==0.1.59
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.2
@@ -38,6 +39,8 @@ orjson==3.10.3
 packaging==23.2
 pandas==2.2.2
 pillow==10.3.0
+plumbum==1.8.3
+ply==3.11
 protobuf==4.25.3
 pyarrow==16.1.0
 pydantic==2.7.1
@@ -52,6 +55,7 @@ replicate==0.26.0
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.1
+setuptools==69.5.1
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
